<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/grey"
        android:text="@string/passenger_list_app"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/get_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/get_passenger_list"
        android:onClick="getList"/>

    <TextView
        android:id="@+id/show_list"
        android:text="@string/returned_passenger_list"
        android:background="@color/yellow"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"/>

</LinearLayout>